# sprofile

./: .SRCINFO  .gitignore  Cargo.toml  PKGBUILD  README.md  Rocket.toml
server/: index.js  package-lock.json  package.json  token.js  writeSecret.js
src/: app.rs  main.rs  secret.rs  ui.rs  utils.rs
src/controllers/: fetch.rs  mod.rs  server.rs
src/fetch/: mod.rs  spotify.rs
src/fetch/spotify/: mod.rs
