[package]
name = "sprofile"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
crossterm = "0.27.0"
dirs = "5.0.1"
ratatui = "0.26.3"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7.1"
rocket = { version = "0.5.1", features = ["json"] }
tokio = { version = "1", features = ["full"] }
webbrowser = "1.0.1"
